renamed some stuff and moved some stuff around to make it more readable

--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -207,7 +207,7 @@ on post-fs-data
     chown system system /dev/usb_mtp_gadget
 
     # Enabling a thermal daemon
-    setprop persist.thermal.monitor true
+    # setprop persist.thermal.monitor true
 
     setprop vold.post_fs_data_done 1
 
@@ -455,8 +455,7 @@ service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
 #    class late_start
 #    oneshot
 
-#on property:init.svc.bootanim=stopped
-on property:init.svc.samsungani=stopped
+on property:init.svc.bootanim=stopped
     start qcom-post-boot
 
 service atfwd /system/bin/ATFWD-daemon
@@ -518,14 +517,14 @@ on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
     write /proc/sys/net/ipv4/tcp_adv_win_scale  1
 
-service thermald /system/bin/thermald
-    class late_start
-    user root
-    group root
-    disabled
+#service thermald /system/bin/thermald
+#    class late_start
+#    user root
+#    group root
+#    disabled
 
-on property:persist.thermal.monitor=true
-    start thermald
+#on property:persist.thermal.monitor=true
+#    start thermald
 
 service time_daemon /system/bin/time_daemon
     class late_start
