messing around with the ramdisk, changes may or may not help

--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -27,24 +27,32 @@
 
 import init.qcom.usb.rc
 import init.bt.rc
-import init.sensor.rc
+import init.target.rc
 
 on init
     # Set permissions for persist partition
     mkdir /persist 0771 system system
 
+#SysScope
+symlink /dev/block/mmcblk0p16 /dev/block/param
+	
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
 
-on boot-pause
-    exec system/bin/battery_charging
+on early-init
+    # for backwards compatibility
+    export EXTERNAL_STORAGE /storage/sdcard0
+    mkdir /storage 0550 system sdcard_r
+    mkdir /storage/sdcard0 0000 system system
+    symlink /storage/sdcard0 /sdcard
+    symlink /storage/sdcard0 /mnt/sdcard
 
-on post-fs-data
- 
-    # we will remap this as /mnt/sdcard with the sdcard fuse tool
-    mkdir /data/media 0775 media_rw media_rw
-    chown media_rw media_rw /data/media
+# map "real" external storages paths also in same way. backwards compatibility.
+    symlink /storage/extSdCard /mnt/extSdCard
+
+    export SECONDARY_STORAGE /storage/extSdCard:/storage/UsbDriveA:/storage/UsbDriveB:/storage/UsbDriveC:/storage/UsbDriveD:/storage/UsbDriveE:/storage/UsbDriveF
+    mkdir /storage/extSdCard 0000 system system
 
 on boot
     exec system/bin/btnvtool -O
@@ -65,36 +73,41 @@ on boot
     chown bluetooth bluetooth /sys/devices/platform/msm_serial_hs.0/clock
     chmod 0660 /sys/devices/platform/msm_serial_hs.0/clock
 
+    chmod 0660 /dev/ttyHS2
+    chown bluetooth bluetooth /dev/ttyHS2
+
+    #Create QMUX deamon socket area
     mkdir /dev/socket/qmux_radio 0770 radio radio
     chmod 2770 /dev/socket/qmux_radio
     mkdir /dev/socket/qmux_audio 0770 media audio
     chmod 2770 /dev/socket/qmux_audio
     mkdir /dev/socket/qmux_bluetooth 0770 bluetooth bluetooth
     chmod 2770 /dev/socket/qmux_bluetooth
+    mkdir /dev/socket/qmux_gps 0770 gps gps
+    chmod 2770 /dev/socket/qmux_gps
+
+    # Allow QMUX daemon to assign port open wait time
+    chown radio radio /sys/devices/virtual/hsicctl/hsicctl0/modem_wait
 
     setprop wifi.interface wlan0
 
+    setprop ro.telephony.call_ring.multiple false
+
     #Set SUID bit for usbhub
-    chmod 4755 /system/bin/usbhub
+    chmod 755 /system/bin/usbhub
     chmod 755 /system/bin/usbhub_init
 
     #Remove SUID bit for iproute2 ip tool
     chmod 0755 /system/bin/ip
 
-    #port-bridge
-    chmod 0660 /dev/smd0
-    chown system system /dev/smd0
-
-    #BT DUN port-bridge
-    chmod 0660 /dev/smd7
-    chown bluetooth bluetooth /dev/smd7
 
     chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
 
     # create symlink for fb1 as HDMI
     symlink /dev/graphics/fb1 /dev/graphics/hdmi
 
-    # Remove write permissions to video related nodes
+    # setup permissions for fb1 related nodes
+    chown system graphics /sys/class/graphics/fb1/hpd
     chmod 0664 /sys/devices/virtual/graphics/fb1/hpd
     chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
     chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
@@ -122,6 +135,10 @@ on boot
     write /proc/sys/net/ipv6/conf/rmnet_sdio5/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet_sdio6/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet_sdio7/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_usb0/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_usb1/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_usb2/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_usb3/accept_ra 2
 
     # To prevent out of order acknowledgements from making
     # connection tracking to treat them as not belonging to
@@ -131,22 +148,101 @@ on boot
     # an ack packet comes out of order
     write /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal 1
 
+on fs	
+	mount_all fstab.qcom
+
+on emmc-fs
+# mount mmc partitions
+    wait /dev/block/mmcblk0p17
+    mount ext4 /dev/block/mmcblk0p17 /system ro barrier=1
+
+    exec set_crypt_meta_info /dev/block/mmcblk0p19 data
+    wait /dev/block/mmcblk0p19
+#    exec /system/bin/e2fsck -p /dev/block/mmcblk0p19
+    exec sfsck /dev/block/mmcblk0p19 ext4 encryptable
+    mount ext4 /dev/block/mmcblk0p19 /data nosuid nodev noatime barrier=1 discard,noauto_da_alloc,journal_async_commit
+    mount ext4 /dev/block/mmcblk0p13 /persist nosuid nodev barrier=1
+
+    wait /dev/block/mmcblk0p18
+    exec sfsck /dev/block/mmcblk0p18 ext4
+    mount ext4 /dev/block/mmcblk0p18 /cache nosuid nodev barrier=1
+
+    wait /dev/block/mmcblk0p14
+    exec sfsck /dev/block/mmcblk0p14 ext4
+    mount ext4 /dev/block/mmcblk0p14 /efs nosuid nodev barrier=1
+    chown radio system /efs
+    chmod 0771 /efs
+        mkdir /efs/imei 0775
+        chown radio system /efs/imei
+        chown radio system /efs/imei/keystr
+        chmod 0775 /efs/imei
+        chmod 0775 /efs/imei/keystr
+
+    wait /dev/block/mmcblk0p20
+    exec sfsck /dev/block/mmcblk0p20 ext4
+    mount ext4 /dev/block/mmcblk0p20 /carrier nosuid nodev barrier=1
+    chown system system /carrier
+        chmod 0771 /carrier
+	
 # import cne init file
 on post-fs
+
+    # once everything is setup, no need to modify /
+    mount rootfs rootfs / ro remount
+
+    # We chown/chmod /cache again so because mount is run as root + defaults
+    chown system cache /cache
+    chmod 0770 /cache
+
+    # This may have been created by the recovery system with odd permissions
+    chown system cache /cache/recovery
+    chmod 0770 /cache/recovery
+
+    #change permissions on vmallocinfo so we can grab it from bugreports
+    chown root log /proc/vmallocinfo
+    chmod 0440 /proc/vmallocinfo
+
+    #change permissions on kmsg & sysrq-trigger so bugreports can grab kthread stacks
+    chown root system /proc/kmsg
+    chmod 0440 /proc/kmsg
+    chown root system /proc/sysrq-trigger
+    chmod 0220 /proc/sysrq-trigger
+
+    # create the lost+found directories, so as to enforce our permissions
+    mkdir /cache/lost+found 0770 root root
+	# for parameter
+    chown system radio /dev/block/mmcblk0p16
+    chmod 0660 /dev/block/mmcblk0p16
+
     export_rc /persist/init.cne.rc
+    start qcom-post-fs
 
 # msm specific files that need to be created on /data
 on post-fs-data
+    # we will remap this as /mnt/sdcard with the sdcard fuse tool
+    mkdir /data/media 0775 media_rw media_rw
+    chown media_rw media_rw /data/media
 
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
 
     # Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi 0770 wifi system
-    chmod 0770 /data/misc/wifi
-    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0775 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
+    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
+    rm  /data/system/wpa_supplicant
+
+# for WIFI module
+    mkdir /efs/wifi 0775 radio system
+    chown system system /efs/wifi/.mac.info
+    chmod 0664 /efs/wifi/.mac.info
+
+# for WIFI TRP/TIS
+    write /data/.psm.info 1
+    chown system root /data/.psm.info
+    chmod 0660 /data/.psm.info
 
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
@@ -167,15 +263,15 @@ on post-fs-data
     chown system system /sys/devices/platform/msm_sdcc.4/polling
 
     #Create the symlink to qcn wpa_supplicant folder for ar6000 wpa_supplicant
-    mkdir /data/system 0775 system system
-    symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
+    #mkdir /data/system 0775 system system
+    #symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
 
     #Create directories for wiper services
     mkdir /data/wpstiles/ 0755 shell
     mkdir /data/wiper 0755 gps qcom_oncrpc
 
     #Create directories for gpsone_daemon services
-    mkdir /data/misc/gpsone_d 0770 system system
+    mkdir /data/misc/gpsone_d 0770 system gps
 
     #Create directories for QuIPS
     mkdir /data/misc/quipc 0770 gps system
@@ -183,6 +279,7 @@ on post-fs-data
     #Create directories for Location services
     mkdir /data/misc/location 0770 gps gps
     mkdir /data/misc/location/mq 0770 gps gps
+    mkdir /data/misc/location/xtwifi 0770 gps gps
 
     #Create directory from IMS services
     mkdir /data/shared 0755
@@ -202,12 +299,9 @@ on post-fs-data
     # Enable the setgid bit on the directory
     chmod 2770 /data/bluetooth
 
-# MTP Device permission.
-    chmod 0660 /dev/usb_mtp_gadget
-    chown system system /dev/usb_mtp_gadget
-
-    # Enabling a thermal daemon
-    # setprop persist.thermal.monitor true
+    mkdir /data/audio/ 0770 media audio
+    # Enable the setgid bit on the directory
+    chmod 2770 /data/audio
 
     setprop vold.post_fs_data_done 1
 
@@ -218,11 +312,9 @@ service usbhub_init /system/bin/usbhub_init
    disabled
    oneshot
 
-# create virtual SD card at /mnt/sdcard, based on the /data/media directory
-# daemon will drop to user/group system/media_rw after initializing
-# underlying files in /data/media wil be created with user and group media_rw (1023)
-service sdcard /system/bin/sdcard /data/media 1023 1023
-    class late_start
+on property:init.svc.surfaceflinger=stopped
+    stop ppd
+    stop hdmid
 
 on property:ro.board.platform=msm7630_fusion
     start usbhub_init
@@ -244,66 +336,25 @@ service qcom-c_main-sh /system/bin/sh /init.qcom.class_main.sh
     user root
     oneshot
 
+on property:vold.decrypt=trigger_restart_framework
+    start qcom-c_main-sh
+
 service cnd /system/bin/cnd
     class late_start
-    socket cnd stream 660 root radio
-    disabled
+    socket cnd stream 666 root radio
 
-on property:persist.cne.UseCne=vendor
-    start cnd
-
-on property:persist.cne.UseCne=Vendor
-    start cnd
-
-service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p10 /dev/block/mmcblk0p11
+service rmt_storage /system/bin/rmt_storage
     class core
     user root
     disabled
 
-on property:ro.emmc=1
+on property:ro.boot.emmc=true
     start rmt_storage
-
-#service bt-dun /system/bin/dun-server /dev/smd7 /dev/rfcomm0
-#    class late_start
-#    disabled
-#    oneshot
-
-#service bt-sap /system/bin/sapd 15
-#    class late_start
-#    disabled
-#    oneshot
-
-#service sapd /system/bin/sdptool add --channel=15 SAP
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin
-#    disabled
-#    oneshot
-
-#service dund /system/bin/sdptool add --channel=1 DUN
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin
-#    disabled
-#    oneshot
-
-#HCI_ENABLE_BT_DEV_UNDER_TEST_MODE ; thun.lim
-#service bt_dut_cmd /system/bin/bt_dut
-#    group bluetooth net_bt_admin
-#    class main
-#    disabled
-#    oneshot
-
-#BLUETOOTH_AUDIO_LOOPBACK_TEST_MODE
-#service bt_audio_dut_cmd /system/bin/bt_audio_dut
-#    group bluetooth net_bt_admin
-#    class main
-#    disabled
 
 service bridgemgrd /system/bin/bridgemgrd
     class late_start
     user radio
-    group radio
+    group radio qcom_diag
     disabled
 
 service port-bridge /system/bin/port-bridge /dev/smd0 /dev/ttyGS0
@@ -320,17 +371,19 @@ on property:ro.baseband="msm"
 service qmiproxy /system/bin/qmiproxy
     class main
     user radio
-    group radio
+    group radio qcom_diag
+    disabled
 
 # QMUX must be in multiple groups to support external process connections
-#For EncryptionMode - remove disabled, Modify class main
 service qmuxd /system/bin/qmuxd
     class main
-    user root
-    group radio log audio bluetooth
+    user radio
+    group radio audio bluetooth gps qcom_diag
+    disabled
 
 service netmgrd /system/bin/netmgrd
-    class late_start
+    class main
+    disabled
 
 service sensors /system/bin/sensors.qcom
     class late_start
@@ -339,7 +392,7 @@ service sensors /system/bin/sensors.qcom
     disabled
 
 on property:ro.use_data_netmgrd=false
-#netmgr not supported on specific target
+    # netmgr not supported on specific target
     stop netmgrd
 
 # Adjust socket buffer to enlarge TCP receive window for high bandwidth
@@ -354,38 +407,84 @@ service btwlancoex /system/bin/sh /system/etc/init.qcom.coex.sh
     disabled
     oneshot
 
-service wpa_supplicant /system/bin/wpa_supplicant \
-    -Dnl80211 -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin
+service amp_init /system/bin/amploader -i
+    class late_start
+    user root
+    disabled
+    oneshot
+
+service amp_load /system/bin/amploader -l 7000
+    class late_start
+    user root
+    disabled
+    oneshot
+
+service amp_unload /system/bin/amploader -u
+    class late_start
+    user root
+    disabled
+    oneshot
+
+service p2p_supplicant /system/bin/p2p_supplicant \
+    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
+    -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
     #   user wifi
     #   group wifi inet keystore
     class main
-    socket wpa_wlan0 dgram 0660 wifi wifi
     disabled
     oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
+service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
+    -e/data/misc/wifi/entropy.bin
+    #   we will start as root and wpa_supplicant will switch to user wifi
+    #   after setting up the capabilities required for WEXT
+    #   user wifi
+    #   group wifi inet keystore
     class main
+    socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
 
-service dhcpcd_p2p /system/bin/dhcpcd -aABKL
-    class main
+service dhcpcd_wlan0 /system/bin/dhcpcd -ABKLG
+    class late_start
+    disabled
+    oneshot
+
+service dhcpcd_p2p /system/bin/dhcpcd -ABKLG
+    class late_start
     disabled
     oneshot
 
 service iprenew_wlan0 /system/bin/dhcpcd -n
-    class main
+    class late_start
     disabled
     oneshot
 
-service iprenew_p2p /system/bin/dhcpcd -n p2p
-    class main
+service iprenew_p2p /system/bin/dhcpcd -n
+    class late_start
     disabled
     oneshot
 
 service dhcpcd_bnep0 /system/bin/dhcpcd -BKLG
+    disabled
+    oneshot
+
+service dhcpcd_bnep1 /system/bin/dhcpcd -BKLG
+    disabled
+    oneshot
+
+service dhcpcd_bnep2 /system/bin/dhcpcd -BKLG
+    disabled
+    oneshot
+
+service dhcpcd_bnep3 /system/bin/dhcpcd -BKLG
+    disabled
+    oneshot
+
+service dhcpcd_bnep4 /system/bin/dhcpcd -BKLG
     disabled
     oneshot
 
@@ -408,6 +507,24 @@ service quipc_igsn /system/bin/quipc_igsn
     disabled
 
 service quipc_main /system/bin/quipc_main
+    class late_start
+    user gps
+    group gps net_admin wifi inet
+    disabled
+
+service location_mq /system/bin/location-mq
+    class late_start
+    user gps
+    group gps
+    disabled
+
+service xtwifi_inet /system/bin/xtwifi-inet-agent
+    class late_start
+    user gps
+    group inet gps
+    disabled
+
+service xtwifi_client /system/bin/xtwifi-client
     class late_start
     user gps
     group net_admin wifi inet gps
@@ -440,6 +557,12 @@ on property:drmdiag.load=1
 on property:drmdiag.load=0
     stop drmdiag
 
+service qcom-post-fs /system/bin/sh /system/etc/init.qcom.post_fs.sh
+    class core
+    user root
+    disabled
+    oneshot
+
 service qcom-sh /system/bin/sh /init.qcom.sh
     class late_start
     user root
@@ -451,11 +574,14 @@ service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
     disabled
     oneshot
 
-#service qcom-wifi /system/bin/sh /system/etc/init.qcom.wifi.sh
-#    class late_start
-#    oneshot
+service wifi-sdio-on /system/bin/sh /system/etc/init.qcom.sdio.sh
+    class late_start
+    group wifi inet
+    disabled
+    oneshot
 
-on property:init.svc.bootanim=stopped
+
+on property:sys.boot_completed=1
     start qcom-post-boot
 
 service atfwd /system/bin/ATFWD-daemon
@@ -466,22 +592,9 @@ service atfwd /system/bin/ATFWD-daemon
 
 service hdmid /system/bin/hdmid
     class late_start
-	user system
-    group system graphics
-	socket hdmid stream 0660 system system
+    socket hdmid stream 0660 root system graphics
     disabled
 
-on property:ro.hdmi.enable=true
-    start hdmid
-
-#HDMID Permission for sys nodes
-chown system graphics /sys/class/graphics/fb1/connected 
-chown system graphics /sys/class/graphics/fb1/edid_modes 
-chown system graphics /sys/class/graphics/fb1/power_state 
-chown system graphics /sys/class/graphics/fb1/hpd
-chown system graphics /sys/class/graphics/fb1/hdcp_present 
-chown system graphics /sys/class/graphics/fb1/hdmi_mode
-chmod 0660 /sys/class/graphics/fb1/power_state	
 service ppd /system/bin/mm-pp-daemon
     class late_start
     user system
@@ -506,7 +619,6 @@ on property:persist.data.ds_fmc_app.mode=1
 
 service ims_regmanager /system/bin/exe-ims-regmanagerprocessnative
     class late_start
-    user system
     group qcom_oncrpc net_bt_admin inet radio wifi
     disabled
 
@@ -517,31 +629,18 @@ on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
     write /proc/sys/net/ipv4/tcp_adv_win_scale  1
 
-#service thermald /system/bin/thermald
-#    class late_start
-#    user root
-#    group root
-#    disabled
-
-#on property:persist.thermal.monitor=true
-#    start thermald
-
-service time_daemon /system/bin/time_daemon
-    class late_start
-    user root
-    group root
-    oneshot
+service battery_monitor /system/bin/battery_monitor
+    user system
+    group system
     disabled
 
-on property:persist.timed.enable=true
-    start time_daemon
-
-#service ftp /system/bin/sdptool add --psm=5257 --channel=20 FTP
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin
-#    disabled
-#    oneshot
+service ril-daemon1 /system/bin/rild -c 1
+    class main
+    socket rild1 stream 660 root radio
+    socket rild-debug1 stream 660 radio system
+    user root
+    disabled
+    group radio cache inet misc audio sdcard_r sdcard_rw qcom_oncrpc diag qcom_diag log
 
 service map0 /system/bin/sdptool add --channel=16 MAS0
     class late_start
@@ -567,8 +666,15 @@ service sdcard /system/bin/sdcard /data/media 1023 1023
     class late_start
     disabled
 
-on property:persist.fuse_sdcard=true
+on property:ro.fuse_sdcard=true
     start sdcard
+
+# This will make sure that sdcard service starts as late_start.
+on nonencrypted
+    setprop ro.fuse_sdcard ${persist.fuse_sdcard}
+
+on property:vold.decrypt=trigger_restart_framework
+    setprop ro.fuse_sdcard ${persist.fuse_sdcard}
 
 service hcidump /system/bin/sh /system/etc/hcidump.sh
     user bluetooth
@@ -576,15 +682,12 @@ service hcidump /system/bin/sh /system/etc/hcidump.sh
     disabled
     oneshot
 
-service ftm_ptt /system/bin/ftm_ptt -d
-    class late_start
-    user root
-    group radio
-    disabled
-    oneshot
+service charger /charger
+    class charger
 
-on property:ftm_ptt_start=1
-    start ftm_ptt
+# Restart adbd so it can run as root
+on property:service.adb.root=1
+    write /sys/class/android_usb/android0/enable 0
+    restart adbd
+    write /sys/class/android_usb/android0/enable 1
 
-on property:ftm_ptt_start=0
-    stop ftm_ptt
